...
    <Preference
        android:key="buttonSendFeedback"
        android:title="Send Feedback" />

    <PreferenceCategory
        android:key="pref_key_user_settings"
        android:title="Logout" />

    <Preference
            android:background="#ff1412dd"
            android:key="buttonLogout"
            android:textColor="#fff"
            android:textStyle="bold"
            android:title="Logout User" />


</PreferenceScreen>
