<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EntryPoint" >
    <item android:id="@+id/action_preferences"
        android:title="@string/action_preferences"
    android:icon="@drawable/ic_action_settings"

        android:showAsAction="ifRoom" />

</menu>
